# facial_recognition_bias

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: build.yml
cnn/: convolution_neural_net.py
src/: Convolution_neural_net.py  facial_recognition.py  graph.py  plot.py  plot_classifiers.py  sort_data.py
src/CNN/: CNN.py  Convolution_neural_net.py  README.md  classify.py  convolution_neural_net.py  data_classifier.py  image_classifier.py  visualizer.py  visualzer.py
src/MLP/: README.md  classify.py
src/RandomForest/: README.md  RandomForest.pkl  RandomForest_model.pkl  classify.py
src/SVM/: README.md  classify.py
src/cnn/: image_classifier.py
src/random_forest/: classify.py  classify1.py
tests/: test_face_recognition.py
