[tool.poetry]
name = "facial_recognition_bias"
version = "0.1.0"
description = ""
authors = ["bagashvilit <bagashvilit@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.11"
opencv-python = "^4.5.4"
scikit-learn = "^1.0.1"
pre-commit = "^2.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
